changed spacing and font loading issue

--- a/style.less
+++ b/style.less
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-	background-color:#EEEEEE;
+	background-color: white;
 	color: white;
 	font-family:Montserrat;
 	font-weight:300;
@@ -117,7 +117,7 @@ a.anchor {
 .speaker_bio_modal {
 	.modal-content {
 		border-radius:0px;
-		background: #333333;
+		background: lighten(@TED_RED, 40%);
 	}
 	.modal-body {
 		.speaker_photo {
@@ -141,7 +141,7 @@ a.anchor {
 		p {
 			font-size:14px;
 			font-family: Montserrat;
-			color:white;
+			color:@TED_RED;
 		}
 	}
 
